// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/helmv3/artifacts catches errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "Chart.lock",
      "stderr": "not found",
    },
  },
]
`;

exports[`manager/helmv3/artifacts returns null if unchanged 1`] = `
Array [
  Object {
    "cmd": "helm dependency update ''",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/helmv3/artifacts returns updated Chart.lock 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New Chart.lock",
      "name": "Chart.lock",
    },
  },
]
`;

exports[`manager/helmv3/artifacts returns updated Chart.lock 2`] = `
Array [
  Object {
    "cmd": "helm dependency update ''",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/helmv3/artifacts returns updated Chart.lock for lockfile maintenance 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New Chart.lock",
      "name": "Chart.lock",
    },
  },
]
`;

exports[`manager/helmv3/artifacts returns updated Chart.lock for lockfile maintenance 2`] = `
Array [
  Object {
    "cmd": "helm dependency update ''",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/helmv3/artifacts returns updated Chart.lock with docker 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New Chart.lock",
      "name": "Chart.lock",
    },
  },
]
`;

exports[`manager/helmv3/artifacts returns updated Chart.lock with docker 2`] = `
Array [
  Object {
    "cmd": "docker pull renovate/helm",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_helm -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_helm --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -e HELM_EXPERIMENTAL_OCI -w \\"/tmp/github/some/repo\\" renovate/helm bash -l -c \\"helm dependency update ''\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/helmv3/artifacts sets repositories from aliases 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New Chart.lock",
      "name": "Chart.lock",
    },
  },
]
`;

exports[`manager/helmv3/artifacts sets repositories from aliases 2`] = `
Array [
  Object {
    "cmd": "helm repo add stable the_stable_url",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "helm repo add repo1 the_repo1_url",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "helm dependency update ''",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/helmv3/artifacts sets repositories from aliases with docker 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New Chart.lock",
      "name": "Chart.lock",
    },
  },
]
`;

exports[`manager/helmv3/artifacts sets repositories from aliases with docker 2`] = `
Array [
  Object {
    "cmd": "docker pull renovate/helm",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_helm -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_helm --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -e HELM_EXPERIMENTAL_OCI -w \\"/tmp/github/some/repo\\" renovate/helm bash -l -c \\"helm repo add stable the_stable_url && helm repo add repo1 the_repo1_url && helm dependency update ''\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
